--- a/css/output.css
+++ b/css/output.css
@@ -668,6 +668,10 @@ video {
   margin-top: 0.75rem;
 }
 
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
 .block {
   display: block;
 }
@@ -690,6 +694,10 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.h-20 {
+  height: 5rem;
 }
 
 .w-1\/2 {
@@ -737,8 +745,24 @@ video {
   width: 91.666667%;
 }
 
+.w-7 {
+  width: 1.75rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
 .cursor-pointer {
   cursor: pointer;
+}
+
+.list-image-none {
+  list-style-image: none;
 }
 
 .flex-col {
@@ -773,12 +797,20 @@ video {
   gap: 1rem;
 }
 
+.text-ellipsis {
+  text-overflow: ellipsis;
+}
+
 .rounded-2xl {
   border-radius: 1rem;
 }
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .border {
@@ -907,6 +939,11 @@ video {
   --tw-gradient-to: #ffafafda var(--tw-gradient-to-position);
 }
 
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .p-1 {
   padding: 0.25rem;
 }
@@ -985,6 +1022,46 @@ video {
 
 .pr-1 {
   padding-right: 0.25rem;
+}
+
+.pl-\[\] {
+  padding-left: ;
+}
+
+.pl-\[1rem\] {
+  padding-left: 1rem;
+}
+
+.pl-\[0\.2rem\] {
+  padding-left: 0.2rem;
+}
+
+.pl-\[0\.3rem\] {
+  padding-left: 0.3rem;
+}
+
+.pl-\[0\.5rem\] {
+  padding-left: 0.5rem;
+}
+
+.pl-\[0\.7rem\] {
+  padding-left: 0.7rem;
+}
+
+.pl-\[0\.9rem\] {
+  padding-left: 0.9rem;
+}
+
+.pl-\[rem\] {
+  padding-left: rem;
+}
+
+.pl-\[0\.8rem\] {
+  padding-left: 0.8rem;
+}
+
+.pl-\[0\.6rem\] {
+  padding-left: 0.6rem;
 }
 
 .text-center {
@@ -1086,6 +1163,16 @@ video {
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-\[\#626974\] {
+  --tw-text-opacity: 1;
+  color: rgb(98 105 116 / var(--tw-text-opacity));
+}
+
+.text-\[\#747c8a\] {
+  --tw-text-opacity: 1;
+  color: rgb(116 124 138 / var(--tw-text-opacity));
 }
 
 .placeholder-\[\#747475\]::-moz-placeholder {
@@ -1236,6 +1323,10 @@ video {
     padding-left: 1rem;
     padding-right: 1rem;
   }
+
+  .sm\:pl-\[1rem\] {
+    padding-left: 1rem;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1287,6 +1378,10 @@ video {
 
   .lg\:w-\[90\%\] {
     width: 90%;
+  }
+
+  .lg\:pl-\[4\.3rem\] {
+    padding-left: 4.3rem;
   }
 }
 
